# awesome

./: .gitignore  README.md  index.md  我总结的小技巧.md  我遇到过的那些坑.md  断续上传的方案.md
devenv/: devenv.md
devenv/config/: env  hosts
devenv/data/: es.md  redis.md
devenv/database/: es.md
devenv/database/mysql/: mysql.md
devenv/dev/: olap.md  pdm.md  ssh.md
devenv/devtool/: ide.md  ssh.md  vscode.md
devenv/devtool/git/: git.md  git.sh  github_ssh.sh
devenv/docker/: cloudflare.md  docker.md  docker.sh  install.md  proxy.js
devenv/k8s/: kubectl-install.md  kubectl.sh
devenv/k8s/install/: cni-calico.yaml  crictl.yaml  install.sh  kubeadm-init-config.yaml  kubeadm-join-config.yaml  插件.md
devenv/k8s/rbac/: role.sh  role.yaml  useraccount.md  useraccount.sh
devenv/k8s/tpl/: PersistentVolume.yaml  ingress.yaml
devenv/msys2/: msys2.md  msys2目录解析.md
env/: _env.md
env/cmd/: 常用合集.md
env/dev/: anaconda.md  apisix-api.md  git.md  hyperv.md  ide.md  mint.md  node.md  pdm.md  windows.md  zsh.md
env/dev/docker/: docker.md  install.sh  端口暴露.md
env/dev/win/: c.md  msys2.md  msys2目录解析.md  samefile.js  windows.md  (+1 more)
env/docker/: cloudflare.md  docker.sh  install.md
env/k8s/: 1-k8s.conflist  10-bridge.conflist  10-ipvlan.conflist  cni-calico.yaml  crictl.yaml  deploy.sh  install.sh  kube.sh  kubeadm-init-config.yaml  kubeconfig.sh  kubectl.sh  minikube.md
env/msys2/: msys2.md  terminal.md
env/win/: msys2.md  node.md  terminal.md
env/wsl/: systemd.md  wsl2.md
lang/: .gitignore  README.md  go.md  node.md  pdm.md  python.md  uv.md
lang/csharp/: .gitignore  Program.cs  csharp.csproj  csharp.sln
lang/dart/: hello.dart  pubspec.yaml
lang/ffi/: .gitignore  Tup-node  Tupfile  Tuprules.tup  binding.gyp  build.zig  building.gyp  compile-all.sh  hello-cgo.go  hello.c  hello.cpp  hello.dart  hello.go  hello.js  hello.lua  hello.rs  hello.zig  run-all.sh
lang/go/: config.dev.toml  config.toml  go.mod  go.sum
lang/java/: build.gradle.kts
lang/python/: README.md  package.md  pyproject.toml
lang/python/coordinate/: point_rect.py  transpoint.py
lang/python/custom/: gerber.py  gerber_parse.py  mysql_http_proxy.py  mysql_socket.py  showtiff.py  socket_mysql.py  socks2http.py  tiff_PIL_vtk.py  tiff_itk_vtk.py  tiff_matplotlib_3d.py  tiff_vtk_3d.py  tiffgray.py
lang/python/cwarp/: opencv.cpp
lang/python/cwarp/usecffi/: failed.md  wrapper.py
lang/python/cwarp/usecython/: failed.md  setup.py  test.py  wrapper.pyx
lang/python/cwrap/: opencv.cpp
lang/python/cwrap/usecffi/: wrapper.py
lang/python/cwrap/usecython/: failed.md
lang/python/lang/: syntax.py
lang/python/ml/: contrast.py  ocr.py
lang/python/opencv/: 3d.py  3d_pyvista.py  affine_transform.py  best.py  contours.py  contrast.py  contrast2.py  corp.py  corp_from_json.py  corp_rotate.py  cutouts.py  deskew.py  draw.py  draw_ellipse.py  draw_gerber.py  draw_point.py  draw_rect.py  draw_rectangle.py  gerber_bare_parse2.py  gerber_parse.py  gerber_parse2.py  gerber_parse3.py  gerber_parse4.py  gerber_physical_match.py  heif_binary_transparent.py  hsv.py  hsv_rmbg.py  hsv_v.py  merge_img.py  merge_imgs.py  overlap-cv.py  overlap-np.py  pad.py  perspective_transform.py  search_cicle.py  search_circle.py  showtiff.py  test.py  threshold.py  tiff.py  (+1 more)
lang/python/pplot/: pcp.py  point_rect.py
lang/python/quant/: k线.py  回测策略.py  移动平均交叉策略.py
lang/python/src/custom/: tiff_itk_vtk.py  tiff_vtk_3d.py
lang/python/src/python/: gerber.py  pcp.py
lang/rust/: .gitignore  Cargo.toml
lang/rust/lang/: Cargo.toml  Cross.toml  build.rs  noxfile.py  pyproject.toml
lang/rust/lang/cxx/: resize.cpp  resize.h
lang/rust/lang/python/hello_world/: __init__.py  sun_cli.py
lang/rust/lang/src/: export.rs  lib.rs  node.rs  python.rs
lang/rust/lang/zig/: README.md  build.zig  opencv.cpp  pthread.c  win.zig
lang/rust/lang/zig/cc/: buildopencv.sh  zig-ar  zig-c++  zig-c++.cmd  zig-cc  zig-ranlib  zig-ranlib.cmd  编译opencv.md
lang/rust/leetcode/: Cargo.toml  build.rs
lang/rust/leetcode/src/: lib.rs
lang/rust/nodem/: Cargo.toml  README.md
lang/rust/nodem/src/: lib.rs
lang/rust/pym/: Cargo.toml  README.md  build.rs  noxfile.py  pyproject.toml
lang/rust/pym/python/hello_world/: __init__.py
lang/rust/pym/python/hello_world.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lang/rust/pym/src/: lib.rs
lang/shell/: bash.sh  case.sh  copyright.sh  dirstorge.sh  fun_test.sh  git.sh  github-ssh.sh  if.sh  loop.sh  mvfile.sh  net.sh  supervision.sh  test.sh  常用合集.md
lang/sql/: count.sql  group.sql  insert.sql  join.sql  procedure.sql  select.sql  update.sql
lang/ts/: package.json  pnpm-lock.yaml  tsconfig.json
lang/zig/: build.zig  zig-ar.cmd  zig-cc.cmd  编译opencv.md
note/: IEEE754.js  cacheline.md  cgo_gerbv.md  for-range-channel会隐式判断是否ok.md  gerber解析.md  git提交规范.md  go二进制分析.md  msys2目录解析.md  node-build.md  rust迭代器.md  systemctl和service的区别.md  位操作技巧.md  关于运行时和虚拟机.md  命令行快捷键.md  图像解码器.md  大小写快速转换.js  大数据 N 件套.md  我总结的小技巧.md  我所遇到过的那些坑.md  我遇到过的那些坑.md  折腾flutter小记.md  控制台style.md  枚举表设计之思考.md  私有ip.md  记一次cgo和jni的测试.md  零宽度字体.js
note/c/: cmake_zig_cc.md  export.h  msys2中的gcc.md
note/casm/: 工具链.md  构建工具.md
note/go/: buildmode.md  cgo_gerbv.md  cgo_zig_cross.md  cgo_为cppapi编写包装.md  cgo指定动态库路径.md  dlv远程调试.md  go-markdown处理.md  go-raft-lib.md  go_build.md  gorm1.25.10版本count会清除joins.md  go中select动态case的使用.md  go关于New时Option的写法.md  go的泛型写法不同导致不同的结果.md  go语言for循环的学问.md  kafkashiyong.md  nsq-handler.md  三色算法.md  区分清http约定返回与grpc的status.md  记一次cgo和jni的测试.md
note/java/: HashMap容量必须是2的N次.md  JAVA 中BIO,NIO,AIO的理解.md  我佛了，经过两天的迷茫及今天的恍然，再测JNI.md
note/js/: .d.ts中声明type和.ts中声明的区别.md  cjs和esm互相引用.md
note/k8s/: docker-inspect.md  k8s-endpoints.md
note/net/: ipv6.md
note/rust/: Rust一个反直觉的行为(原名：一个匪夷所思的Rust Bug).md  leetcode的接雨水II.md  rust的坑.md  rust这ffi差距也太大了吧.md  刷leetcode结果碰到一个rust的bug.md  旋转链表.md
note/前端/: Vue scoped CSS 与深度作用选择器 deep.md  node-canvas手动指定目录.md  node_feat.md  tips.md  vue3+vuex4.0 module+typescript.md
repost/: Actor模型.md  Actor模型浅析 一致性和隔离性.md  actor 模型原理.md  select,poll和epoll.md  关于DDD.md  补充DDD.md
(+415 files in other folders)
