[package]
name = "leetcode"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2021"

[lib]
name = "leetcode"
#  --crate-type [bin|lib|rlib|dylib|cdylib|staticlib|proc-macro]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
shared_memory = "0.12"
napi = { version = "3.0.0-alpha.20", features = [ "async"] }
napi-derive = {version = "3.0.0-alpha.18" }
pyo3 = { version = "0.22", features = ["extension-module"] }

[dependencies.windows]
version = "0.58"
features = [
    "Data_Xml_Dom",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]

[build-dependencies]
napi-build = "2"
