[package]
name = "nodem"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2024"
exclude = ["index.node"]
build = "build.rs"

[lib]
name = "nodem"
#  --crate-type [bin|lib|rlib|dylib|cdylib|staticlib|proc-macro]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
shared_memory = "0.12"
napi = { version = "3.0.0-alpha.20", features = [ "async"] }
napi-derive = {version = "3.0.0-alpha.18" }
tokio = { version = "1", features = ["fs"] }

[dependencies.windows]
version = "0.58"
features = [
    "Data_Xml_Dom",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]

[build-dependencies]
napi-build = "2"
