[package]
name = "pym"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2024"
build = "build.rs"

[lib]
name = "_lib"
crate-type = ["cdylib"]

[[bin]]
name = "python-hello"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
kuchiki = "0.8.0"
tendril = "0.4.3"

[dependencies.windows]
version = "0.58"
features = [
	"Data_Xml_Dom",
	"Win32_System_Console",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
